# bookie

./: Cargo.toml  LICENSE  README.md
src/: bookmark.rs  database.rs  main.rs  parser.rs
