[package]
name = "bookie"
version = "0.1.0"
authors = ["Johannes Schwarzbart <schwarzbartj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
rusqlite = "0.24"
crossterm = "0.17.7"
dirs = "3.0"
chrono = "0.4.15"